--- a/app/assets/stylesheets/components/navigation_bar.scss
+++ b/app/assets/stylesheets/components/navigation_bar.scss
@@ -6,7 +6,7 @@
    	padding: 40px 0;
     background-color: transparent;
     border-color: transparent;
-    border: 0;
+    border: 0 !important;
     color: black;
     .container {
       width: 100%;
