--- a/app/assets/stylesheets/experiment.scss
+++ b/app/assets/stylesheets/experiment.scss
@@ -225,11 +225,29 @@ body.experiment_show .exp-video {
 	z-index: 14 !important;
 }
 
+body.experiment_show .exp-adult-supervision {
+	width: 100%;
+	display: block;
+	text-align: left;
+	margin: 40px 0 0 0 !important;
+	color: red;
+	p {
+		display: inline-block;
+		margin: 0;
+		padding: 10px;
+		border-width: 2px;
+		border-style: solid;
+		border-color: red;
+		font-size: 16px;
+	}
+}
+
 
 body.experiment_show .exp-intro {
 	width: 800px;
 	text-align: left;
 	font-size: 18px;
+	margin-top: 30px !important;
 }
 
 
@@ -399,7 +417,6 @@ body.experiment_show .exp-directions .exp-direction-index{
 
 
 body.experiment_show .exp-warning {
-	align-self: flex-start;
 	display: flex;
 	flex-direction: column;
 	align-items: flex-start;
@@ -412,7 +429,7 @@ body.experiment_show .exp-warning {
 	border-color: red;
 	h4 {
 		position: absolute;
-		top: -15px;
+		top: -20px;
 		left: 20px;
 		font-size: 30px;
 		z-index: 100;
