--- a/app/assets/stylesheets/categories.scss
+++ b/app/assets/stylesheets/categories.scss
@@ -193,21 +193,31 @@ body.root.experiments .exp-list li{
     overflow: hidden;
   }
 
-  .exp-thumbnail1 {
+  .exp-thumbnail {
     overflow: hidden;
   }
 
-  .exp-thumbnail1 .thumb-image{
+  .exp-thumbnail .thumb-image{
     width: 100%;
     height: 100%;
     display: block;
     background-color: black;
     background-position: center center;
-    transition: all 0.5s;
+    background-size: cover;
+    background-repeat: no-repeat;
+  }
+
+  .exp-thumbnail .thumb-image.first-image.hover-effect {
+    animation: reverse-scaling 1s;
+    animation-fill-mode: forwards;
+  }
+
+  .exp-thumbnail .thumb-image.second-image {
+    display: none;
   }
 
   &.big {
-    .exp-thumbnail1 {
+    .exp-thumbnail {
       width: $big_thumb_w;
       height: 380px;
     }
@@ -231,7 +241,7 @@ body.root.experiments .exp-list li{
   }
 
   &.smaller {
-    .exp-thumbnail1 {
+    .exp-thumbnail {
       width: $small_thumb_w;
       height: 280px;
     }
@@ -245,9 +255,14 @@ body.root.experiments .exp-list li{
 
 
 body.root.experiments .exp-list li:hover {
-  .exp-thumbnail1 .thumb-image{
-    transform: scale(1.2);
+  .exp-thumbnail .first-image{
+    display: none;
+  }
 
+  .exp-thumbnail .second-image{
+    display: block;
+    animation: scaling 1s;
+    animation-fill-mode: forwards;
   }
 
   .exp-text {
@@ -255,6 +270,27 @@ body.root.experiments .exp-list li:hover {
     box-shadow: 0px 0px 53px 3px rgba(0,0,0,0.15);
    }
 
+}
+
+@keyframes scaling {
+  0% {
+    transform: scale(1);
+  }
+
+  100% {
+    transform: scale(1.2);
+  }
+}
+
+
+@keyframes reverse-scaling {
+  0% {
+    transform: scale(1.2);
+  }
+
+  100% {
+    transform: scale(1);
+  }
 }
 
 body.root.experiments .exp-list li:not(:hover) {
@@ -307,7 +343,7 @@ body.root.experiments .exp-list .exp-description {
 #load_more_link {
   display: block;
   height: 60px;
-  margin-top: 100px;
+  margin-top: 30px;
   padding-top: 12px;
   color: white;
   background-color: #2C1A4E;
@@ -337,7 +373,7 @@ body.root.experiments .exp-list .exp-description {
     margin: 1vw;
 
     &.smaller {
-      .exp-thumbnail1 {
+      .exp-thumbnail {
         width: 43vw;
         height: 280px;
       }
@@ -412,8 +448,6 @@ body.root.experiments .exp-list .exp-description {
 
 @media screen and (max-width: 975px) {
 
-
-
     body.root.experiments .exp-list li{
 
       margin: 10px 0 10px 0;
@@ -423,7 +457,7 @@ body.root.experiments .exp-list .exp-description {
         margin-left: 0 !important;
         margin-right: 0 !important;
 
-        .exp-thumbnail1 {
+        .exp-thumbnail {
           width: 600px;
           height: 350px;
         }
@@ -447,7 +481,7 @@ body.root.experiments .exp-list .exp-description {
         margin-left: 0 !important;
         margin-right: 0 !important;
 
-        .exp-thumbnail1 {
+        .exp-thumbnail {
           width: 90vw;
           height: 300px;
         }
@@ -473,7 +507,7 @@ body.root.experiments .exp-list .exp-description {
         font-size: 1.2em;
       }
 
-      .exp-thumbnail1 {
+      .exp-thumbnail {
         width: 90vw;
         height: 250px;
       }
