--- a/app/views/application/_footer.html.erb
+++ b/app/views/application/_footer.html.erb
@@ -1,9 +1,21 @@
 <footer class='app-footer-wrapper'>
 	<div class='app-footer container'>
+	  <div class='app-footer-left'>
+		<p class='app-footer-left'>&copy; <%= Time.now.year %></p>
+		<div class='share'>
+	      <%= link_to inline_svg("share_fb.svg"), 
+	            "https://www.facebook.com/share.php?u=#{root_url}",
+	            :title => "facebook", :target => "_blank" %>
+	      <%= link_to inline_svg("share_twitter.svg"), 
+	            "https://twitter.com/share?url=#{root_url}", :title => "twitter",
+	            :target => "_blank" %>
+	    </div>
+	 </div>
 	  <%= link_to image_tag('jumpstart_logo.svg', class: 'app-footer-right'),
 	              'http://jumpstart.ge',
 	              target: '_blank',
 	              title: t('shared.common.jumpstart.slogan') %>
-	  <p class='app-footer-left'>&copy; <%= Time.now.year %> | </p>
+
+
 	</div>
 </footer>
