--- a/app/views/shared/_experiment_show.html.erb
+++ b/app/views/shared/_experiment_show.html.erb
@@ -162,6 +162,9 @@
   </div>
 </div>
 
+<div class="fb-comments" data-href="<%= 'sad' %>" data-num-posts="5" data-width="100%" style='width: 100%;'></div>
+
+
 
 
 <script>
