about page css init

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,6 +21,8 @@ URL: https://gist.github.com/bobbygrace/9e961e8982f42eb91b80
 @import 'categories';
 @import 'experiment';
 @import 'formtastic_overrides';
+@import 'about.scss';
+
 
 // Font awesome icons
 @import 'font-awesome-sprockets';
