--- a/app/assets/stylesheets/experiment.scss
+++ b/app/assets/stylesheets/experiment.scss
@@ -12,7 +12,6 @@ body.experiment_show h3 , h4{
 
 
 body.experiment_show .navbar-static-top {
-	background-color: transparent !important;
    	padding: 40px 0 10px 0;
 }
 
@@ -23,6 +22,10 @@ body.experiment_show .navbar-static-top {
 }
 
 
+body.experiment_show main {
+	position: relative;
+	z-index: 0;
+}
 
 body.experiment_show main .container, body.experiment_show .navbar .container{
 	padding-right: 0px;
@@ -127,11 +130,10 @@ body.experiment_show .exp-header-background {
 
 	.up-left {
 		left: 40px;
-		top: 200px;
 	}	
 
 	.up-right {
-		top: -100px;
+		display: none;
 	}
 
 }
@@ -808,47 +810,6 @@ body.experiment_show .experiment-nav {
 
 
 @media screen and (max-width: 767px) {
-	body.experiment_show .navbar {
-	    background-color: transparent;
-	    .container {
-	    	flex-direction: column;
-	   	    align-items: flex-start;
-	    	justify-content: space-between;
-	    	height: auto;
-	    	margin: 0;
-	    }
-
-	    .container > * {
-	    	text-align: left;
-	    }
-
-	    ul {
-	    	margin: 10px 0 10px 0;
-	    }
-
-	    li {
-	    	margin: 10px 0 10px 0;
-	    }
-
-	    input {
-	    	text-align: left;
-	    }
-
-	    form {
-	    	width: 90vw;
-	    	padding: 5px;
-	    	margin: 0;
-	    }
-
-		.about-element {
-		  justify-content: flex-start;
-		  padding-left: 0;
-		  a {
-			padding-left: 5px;
-		  }
-		}
-
-	}
 
 	body.experiment_show .primary-header {
 		padding: 0 0 60px 0;
