--- a/app/views/root/about.html.erb
+++ b/app/views/root/about.html.erb
@@ -1,1 +1,9 @@
 <% page_title t('.title') %>
+
+<div class='about-text'>
+	<%= simple_format( t('.text') ) %>
+</div>
+
+<div class='about-funding'>
+	<%= t('.funding') %>
+</div>
