navigation color added to variables

--- a/app/assets/stylesheets/components/navigation_bar.scss
+++ b/app/assets/stylesheets/components/navigation_bar.scss
@@ -7,7 +7,7 @@
     background-color: transparent;
     border-color: transparent;
     border: 0 !important;
-    color: #DE9136;
+    color: $navigation-color;
     .container {
       width: 100%;
     }
@@ -38,7 +38,7 @@ body.experiment_show .navbar, body.about .navbar {
 
   #search-form {
     height: auto;
-    border-color: #2C1A4D !important;
+    border-color: $navigation-color !important;
     box-shadow: none !important;
     border-right: 3px solid;
     margin: 0;
@@ -62,19 +62,19 @@ body.experiment_show .navbar, body.about .navbar {
   font-size: 23px;
 
   &::-webkit-input-placeholder {
-     color: #2C1A4D;
+     color: $navigation-color;
   }
 
   &:-moz-placeholder { /* Firefox 18- */
-     color: #2C1A4D; 
+     color: $navigation-color; 
   }
 
   &::-moz-placeholder {  /* Firefox 19+ */
-     color: #2C1A4D; 
+     color: $navigation-color; 
   }
 
   &:-ms-input-placeholder {  
-     color: #2C1A4D;
+     color: $navigation-color;
   }
 
 }
@@ -86,7 +86,7 @@ body.experiment_show .navbar, body.about .navbar {
   justify-content: flex-end;
   a {
     padding: 0 15px;
-    color: #2C1A4D !important;
+    color: $navigation-color !important;
     transition: all 0.3s;
     &:hover, &:focus {
       color: white !important;
@@ -99,7 +99,7 @@ body.experiment_show .navbar, body.about .navbar {
   z-index: 10;
   text-align: right;
   padding-right: 15px;
-  color: #2C1A4D !important;
+  color: $navigation-color !important;
 
   &.open > a, &.open > a:hover, &.open > a:focus {
     background-color: transparent !important;
@@ -168,7 +168,7 @@ body.experiment_show .navbar, body.about .navbar {
       a {
         text-align: left;
         padding: 5px !important;
-        color: #2C1A4D !important;
+        color: $navigation-color !important;
       }
     }
 
