--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -16,6 +16,7 @@ $color-grey-background: #f3f3f4;
 $color-grey-text: #66666d;
 $color-brand: #1599D6;
 
+$navigation-color: #2C1A4D;
 
 // category colors
 $biologia-color: #98d84d;
