--- a/app/assets/stylesheets/categories.scss
+++ b/app/assets/stylesheets/categories.scss
@@ -464,6 +464,11 @@ body.root.experiments .exp-list .exp-description {
           width: 500px;
         }
 
+        .exp-title {
+          height: auto;
+          min-height: 54px;
+          padding: 10px;
+        }
       }
 
   }
@@ -495,7 +500,7 @@ body.root.experiments .exp-list .exp-description {
 }
 
 
-@media screen and (max-width: 350px) {
+@media screen and (max-width: 400px) {
 
   body.root.experiments .exp-list li{
 
