experiment page bullet fix

--- a/app/assets/stylesheets/experiment.scss
+++ b/app/assets/stylesheets/experiment.scss
@@ -821,6 +821,10 @@ body.experiment_show .experiment-nav {
 	body.experiment_show .primary-header h1 {
 		font-size: 65px;
 	}
+
+	body.experiment_show .exp-ingredients .line-circle {
+		top: 45px;
+	}
 }
 
 
@@ -838,4 +842,6 @@ body.experiment_show .experiment-nav {
     	width: 150px;
     	height: 150px;
 	}
+
+
 }
