about link hover change

--- a/app/assets/stylesheets/about.scss
+++ b/app/assets/stylesheets/about.scss
@@ -8,7 +8,7 @@ body.about {
 
 	.navbar .about-element a {
 	    &:hover, &:focus {
-	      color: #646997 !important;
+	      color: #a4a4a4 !important;
 	    }
 	}
  
