index animation height fix

--- a/app/assets/stylesheets/index_categories.scss
+++ b/app/assets/stylesheets/index_categories.scss
@@ -222,8 +222,8 @@ body.root.index .index_categories li .category_image_animation {
   overflow: hidden;
   height: auto;
   svg {
-    width: 100%;
-    height: auto;
+    width: 260px;
+    height: 220px;
   }
 
 }
