hover effect fix

--- a/app/assets/stylesheets/components/navigation_bar.scss
+++ b/app/assets/stylesheets/components/navigation_bar.scss
@@ -121,7 +121,7 @@ body.experiment_show .navbar, body.about .navbar {
 body.about, body.experiments{
    .navbar .about-element a {
         &:hover, &:focus {
-          color: #a4a4a4 !important;
+          color: #f68b3a !important;
         }
     }
 }
