--- a/app/views/root/_experiment_list.html.erb
+++ b/app/views/root/_experiment_list.html.erb
@@ -14,7 +14,7 @@
           %>
           <div class='exp-thumbnail'>
             <div class='thumb-image first-image' style='background-image: url(<%= img1 %>)'></div>
-            <div class='thumb-image second-image' style='background-image: url(<%= img2 %>)'></div>
+            <div class='thumb-image second-image hover-effect' style='background-image: url(<%= img2 %>)'></div>
           </div>
           <div class="exp-text">
           <div class="exp-title category-background-color <%= category_slug %>">
@@ -28,6 +28,6 @@
       </li>
     <% end %>
 
-    <script>
+<!--     <script>
       hover_effect();
-    </script>
+    </script> -->
