--- a/app/views/application/_footer.html.erb
+++ b/app/views/application/_footer.html.erb
@@ -1,10 +1,9 @@
 <footer class='app-footer-wrapper'>
 	<div class='app-footer container'>
 	  <div class='app-footer-left'>
-		<p class='app-footer-left'>&copy; <%= Time.now.year %></p>
-		<div class="addthis_toolbox addthis_default_style " data-url="https://www.facebook.com/JumpStartGeorgia">
+		<p class='date'>&copy; <%= Time.now.year %></p>
+		<div class="addthis_toolbox addthis_default_style"  addthis:url="<%= root_path %>">
 			<a class="addthis_button_facebook_like" fb:like:layout="button_count"></a>
-			<a class="addthis_button_tweet"></a>
 		</div>
 	 </div>
 
@@ -13,13 +12,14 @@
 	              target: '_blank',
 	              title: t('shared.common.jumpstart.slogan') %>
 
-
-
 	</div>
 
 </footer>
 
 <script>
-	var addthis_id = "<%= @addthis_id %>"
+	var addthis_id = "<%= @addthis_id %>";
+	initAdthis();
 </script>
+
+
 
