--- a/app/views/application/_footer.html.erb
+++ b/app/views/application/_footer.html.erb
@@ -2,10 +2,11 @@
 	<div class='app-footer container'>
 	  <div class='app-footer-left'>
 		<p class='date'>&copy; <%= Time.now.year %></p>
-		<div class="addthis_toolbox addthis_default_style"  addthis:url="<%= root_path %>">
+		<div class="addthis_toolbox addthis_default_style"  addthis:url="<%= root_url %>">
 			<a class="addthis_button_facebook_like" fb:like:layout="button_count"></a>
 		</div>
 	 </div>
+	<div class="fb-follow app-footer-right" data-href="https://facebook.com/JumpStartGeorgia/" data-layout="standard" data-size="small" data-show-faces="false"></div>
 
 	  <%= link_to image_tag('jumpstart_logo.svg', class: 'app-footer-right'),
 	              'http://jumpstart.ge',
@@ -14,12 +15,8 @@
 
 	</div>
 
+
 </footer>
 
-<script>
-	var addthis_id = "<%= @addthis_id %>";
-	initAdthis();
-</script>
-
-
+<div id="fb-root"></div>
 
