include experiment thumbnail for share image

--- a/app/views/application/_head.html.erb
+++ b/app/views/application/_head.html.erb
@@ -16,6 +16,12 @@
   <meta property="og:description" content="<%= desc %>" />
   <meta property="og:type" content="non_profit" />
   <meta property="og:url" content="<%= current_url %>" />
+  <% if @experiment.present? && @experiment.thumbnail1.exists? %>
+    <meta property="og:image" content="<%= full_url(@experiment.thumbnail1.url(:original)) %>" />
+  <% end %>
+  <% if @experiment.present? && @experiment.gif.exists? %>
+    <meta property="og:image" content="<%= full_url(@experiment.gif.url(:original)) %>" />
+  <% end %>
   <!--meta property="og:image" content="<%= full_url("/assets/shareimage.png") %>" /-->
   <meta property="og:site_name" content="<%= t("shared.common.name") %>" />
 
