--- a/app/assets/stylesheets/components/app_footer.scss
+++ b/app/assets/stylesheets/components/app_footer.scss
@@ -21,18 +21,31 @@ main {
 
 .app-footer {
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  justify-content: flex-start;
+  align-items: flex-start;
+  position: relative;
   width: 100%;
   color: #4f4f4f;
   height: $footer-height;
+
+  .date {
+    margin-right: 5px;
+    padding-right: 5px;
+    border-right: 2px solid;
+    border-color: rgba(9,9,9,0.38); 
+  }
+
+  > * {
+    margin-top: 20px !important;
+  }
+
 }
 
-.app-footer-left {
+
+
+.app-footer .addthis_toolbox {
   margin: 0;
-  margin-right: 10px;
-  display: flex;
-  align-items: center;
+  margin-right: 25px;
 
   a {
     margin-bottom: 0 !important;
@@ -42,19 +55,57 @@ main {
     height: auto !important;
   }
 
-  .date {
-    margin-right: 10px;
+}
+
+.app-footer .default {
+  position: absolute;
+  right: 10px;
+  top: 0;
+
+  > * {
+    display: inline-block;
+    margin-bottom: 0;
+  }
+}
+  
+.app-footer .fb-follow.hide-follow {
+  display: none;
+}
+
+@media screen and (max-width: 1125px) {
+
+  .app-footer .fb-follow.show-follow {
+    display: none;
+  }
+
+  .app-footer .fb-follow.hide-follow {
+    display: block;
+  }
+
+  .app-footer .addthis_toolbox {
+    margin-right: 3px;
   }
 
 }
 
-
 @media screen and (max-width: 400px) {
-    
-    .app-footer-right {
-      width: 75px;
-      height: auto; 
+
+  .app-footer {
+    justify-content: center;
+    flex-wrap: wrap;
+
+    > * {
+      margin-top: 10px !important;
     }
 
+  }
+
+  .app-footer .default {
+    flex: 1 100%;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 
 }
